Update font-family for headings and fix navbar overlap
Refactor CSS styles for headings and navbar overlap.

--- a/core/static/css/src/app.css
+++ b/core/static/css/src/app.css
@@ -9,25 +9,29 @@
     /* font-family: "Noto Serif", serif; */
     font-family: "Manrope", serif;
   }
- 
-h1, h2, h3, h4, h5, h6, .text-heading {   
-     font-family: "Nohemi", serif;
+
+  h1, h2, h3, h4, h5, h6, .text-heading {   
+    font-family: "Nohemi", serif;
   }
 }
+
 @layer utilities {
   .clip-diagonal {
     clip-path: polygon(0 0, 60% 0, 50% 100%, 0 100%);
-}
-  .cms-page p, .cms-page-bg p  {
+  }
+
+  .cms-page p, .cms-page-bg p {
     margin-bottom: 0.5rem !important;
   }
 
   .cms-page.no-margin-p p, .cms-page-bg.no-margin-p p {
     margin-bottom: 0 !important;
   }
+
   .cms-page a {
     color: #1a305b !important;
   }
+
   .cms-page .faq a {
     text-decoration: underline;
   }
@@ -42,16 +46,15 @@ h1, h2, h3, h4, h5, h6, .text-heading {
   }
 
   .cms-page ul, .cms-page-bg ul, ul.list-disc {
-    list-style-type: disc; /* Equivalent to list-disc */
-    list-style-position: outside; /* Equivalent to list-outside */
-    padding-left: 1.25rem; /* Equivalent to pl-5 */
+    list-style-type: disc;
+    list-style-position: outside;
+    padding-left: 1.25rem;
   }
 
   .cms-page ul.list-none {
     list-style-type: none !important;
     padding-left: 0;
   }
-  
 
   .cms-page ol, .cms-page-bg ol {
     list-style-type: decimal;
@@ -60,4 +63,18 @@ h1, h2, h3, h4, h5, h6, .text-heading {
     padding: 0;
   }
 
+  /* ========================= */
+  /* 🔥 FIX NAVBAR OVERLAP 🔥 */
+  /* ========================= */
+
+  header,
+  nav {
+    position: relative;
+    z-index: 9999;
+  }
+
+  [aria-label="Course Banner"] {
+    position: relative;
+    z-index: 0;
+  }
 }
